Commit, putting in request and request.endpoint

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 <p>BTW here is the config (it's a dictionary):</p>
 <p>{{config}}</p>
 
-<p>And here is request:</p>
+<p>And here is the request:</p>
 <p>{{request}}</p>
 
 {% endblock %}
